feat: opt params and auth (#16)
* feat: add optional params

* feat: opt params and auth

* fix: update user duplicate
